# E-voting

./: README.md
backend/: CMakeLists.txt  README.md  main.cpp
frontend/: index.html  script.js  style.css
